unpackaged/main/default/objects/Opportunity/fields/Account_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Risk_Level__c</fullName>
    <formula>Account.Risk_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Risk Level</label>
    <type>Text</type>
</CustomField>