unpackaged/main/default/objects/Opportunity/fields/Alerting_Name__c.field-meta.xml
<CustomField>
    <fullName>Alerting_Name__c</fullName>
    <description>ce champ correspond au nom du type de l'alerte remontée sur une opportunité 
exemple :  'Close Date Exceeded'</description>
    <formula>IF(CloseDate  &lt; TODAY(), 'Close Date Exceeded',  IF(AND(CloseDate  - TODAY() &lt;= 30, ISPICKVAL(StageName , 'F - Identify the needs') ), 'Closed Date non-coherent', IF(AND(ISBLANK(SBQQ__PrimaryQuote__c) , ISPICKVAL(StageName , 'B - Negotiate') ), 'Missing Quote','Opportunities Without errors' )) )</formula>
    <label>Alerting Name</label>
    <type>Text</type>
</CustomField>