unpackaged/main/default/objects/Opportunity/fields/AlertName__c.field-meta.xml
<CustomField>
    <fullName>AlertName__c</fullName>
    <label>Alert Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close Date Exceeded</fullName>
            </value>
            <value>
                <fullName>Closed Date non-coherent</fullName>
            </value>
            <value>
                <fullName>Missing Meddic</fullName>
            </value>
            <value>
                <fullName>Missing Next Step</fullName>
            </value>
            <value>
                <fullName>Opportunities Without errors</fullName>
                <default>true</default>
                <label>Opportunities Without errors</label>
            </value>
            <value>
                <fullName>Missing Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>