unpackaged/main/default/objects/Opportunity/fields/Amount_Dimension_Booking__c.field-meta.xml
<CustomField>
    <fullName>Amount_Dimension_Booking__c</fullName>
    <description>New field to calcul all amount on opportunity</description>
    <formula>SaaS_Booking_Amount__c  +  Prof_Services_Booking_Amount__c  +  Licences_Booking_Amount__c  +  Other_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Dimension Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>