unpackaged/main/default/objects/Opportunity/fields/Amount_Saas_and_Licences__c.field-meta.xml
<CustomField>
    <fullName>Amount_Saas_and_Licences__c</fullName>
    <description>Sum of Amount Saas and Licences</description>
    <formula>SaaS_Booking_Amount__c +  Licences_Booking_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (Saas and Licences)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>