unpackaged/main/default/objects/Opportunity/fields/Amount_Saas_Licences_Prof__c.field-meta.xml
<CustomField>
    <fullName>Amount_Saas_Licences_Prof__c</fullName>
    <formula>Amount_Saas_and_Licences__c +  Prof_Services_Booking_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (Saas + Licences + Prof.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>