unpackaged/main/default/objects/Opportunity/fields/ATTRILTmedium__c.field-meta.xml
<CustomField>
    <fullName>ATTRILTmedium__c</fullName>
    <label>Last Touch Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>