unpackaged/main/default/objects/Opportunity/fields/Average_daily_rate__c.field-meta.xml
<CustomField>
    <fullName>Average_daily_rate__c</fullName>
    <formula>Professional_Services_Amount__c /  (Estimated_Project_Workload__c )</formula>
    <label>Average daily rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>