unpackaged/main/default/objects/Opportunity/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <label>BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BU</valueSetName>
    </valueSet>
</CustomField>