unpackaged/main/default/objects/Opportunity/fields/Business_Unit_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Opportunity__c</fullName>
    <description>Business Unit</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Unit</valueSetName>
    </valueSet>
</CustomField>