unpackaged/main/default/objects/Opportunity/fields/Buy_Me_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Buy_Me_Quote_Id__c</fullName>
    <externalId>true</externalId>
    <label>Buy Me Quote Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>