unpackaged/main/default/objects/Opportunity/fields/Buying_persona__c.field-meta.xml
<CustomField>
    <fullName>Buying_persona__c</fullName>
    <description>Buying persona</description>
    <label>Buying persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buying_persona</valueSetName>
    </valueSet>
</CustomField>