unpackaged/main/default/objects/Opportunity/fields/By_Pass_MQL_Check__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_MQL_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass MQL Check</label>
    <type>Checkbox</type>
</CustomField>