unpackaged/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <description>Champion</description>
    <inlineHelpText>Weak = no internal sponsor identified | Moderate = You have identified the champion and you're convincing him/her of the value of the solution | Strong = You're in frequent contact with the champion. He/she advocates the solution internally on your behalf [............]</inlineHelpText>
    <label>Champion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MEDDIC_Values</valueSetName>
    </valueSet>
</CustomField>