unpackaged/main/default/objects/Opportunity/fields/Close_Date_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Exceeded__c</fullName>
    <description>close_date dépassée</description>
    <formula>CloseDate  &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Exceeded</label>
    <type>Checkbox</type>
</CustomField>