unpackaged/main/default/objects/Opportunity/fields/Closed_Date_non_coherent__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_non_coherent__c</fullName>
    <description>CloseDate non cohérente</description>
    <formula>AND(CloseDate  - TODAY() &lt;= 30, ISPICKVAL(StageName , 'F - Identify the needs') )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date non-coherent</label>
    <type>Checkbox</type>
</CustomField>