unpackaged/main/default/objects/Opportunity/fields/Comment_Champion__c.field-meta.xml
<CustomField>
    <fullName>Comment_Champion__c</fullName>
    <description>Commentaire sur la valeur attribuée au champ Champion</description>
    <label>Champion Comment</label>
    <type>TextArea</type>
</CustomField>