unpackaged/main/default/objects/Opportunity/fields/Comment_Competition__c.field-meta.xml
<CustomField>
    <fullName>Comment_Competition__c</fullName>
    <description>Commentaire sur la valeur attribuée au champ Competition</description>
    <label>Competition Comment</label>
    <type>TextArea</type>
</CustomField>