unpackaged/main/default/objects/Opportunity/fields/Comment_Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Comment_Decision_Criteria__c</fullName>
    <description>Commentaire sur la valeur attribuée au champ Decision Criteria</description>
    <label>Decision Criteria Comment</label>
    <type>TextArea</type>
</CustomField>