unpackaged/main/default/objects/Opportunity/fields/Comment_Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Comment_Decision_Process__c</fullName>
    <description>Commentaire sur la valeur attribuée au champ Decision Process</description>
    <label>Decision Process Comment</label>
    <type>TextArea</type>
</CustomField>