unpackaged/main/default/objects/Opportunity/fields/Comment_Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Comment_Economic_Buyer__c</fullName>
    <description>Commentaire sur la valeur attribuée au champ Economic Buyer</description>
    <label>Economic Buyer Comment</label>
    <type>TextArea</type>
</CustomField>