unpackaged/main/default/objects/Opportunity/fields/Comment_Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Comment_Identify_Pain__c</fullName>
    <description>Commentaire sur la valeur attribuée au champ Identify Pain</description>
    <label>Identify Pain Comment</label>
    <type>TextArea</type>
</CustomField>