unpackaged/main/default/objects/Opportunity/fields/Comment_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Comment_Metrics__c</fullName>
    <description>Commentaire sur la valeur attribuée au champ Metrics</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>