unpackaged/main/default/objects/Opportunity/fields/CommercialOrganization__c.field-meta.xml
<CustomField>
    <fullName>CommercialOrganization__c</fullName>
    <label>Commercial Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commercial_Organization</valueSetName>
    </valueSet>
</CustomField>