unpackaged/main/default/objects/Opportunity/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Commentaire sur la valeur attribuée au champ Company</description>
    <label>Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>