unpackaged/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>Competition</description>
    <inlineHelpText>Weak = Competition unknown or strong competitor in place | Moderate = No competition or weaker competitor known and strategy in place to address | Strong = Cegid competitive advantage, on price, product, relationship and brand</inlineHelpText>
    <label>Competition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MEDDIC_Values</valueSetName>
    </valueSet>
</CustomField>