unpackaged/main/default/objects/Opportunity/fields/Confirmation_of_opportunity_closing__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_opportunity_closing__c</fullName>
    <inlineHelpText>Once closed, no change can be made to the opportunity</inlineHelpText>
    <label>Confirmation of opportunity closing</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>