unpackaged/main/default/objects/Opportunity/fields/Contract_Duration__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration__c</fullName>
    <inlineHelpText>Contract duration (in months) should be fulfilled manually when creating the opportunity and becomes calculated once a quote has been created.</inlineHelpText>
    <label>Max Contract Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>