unpackaged/main/default/objects/Opportunity/fields/Contributing_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Contributing_Consultant__c</fullName>
    <label>Contributing Consultant</label>
    <type>TextArea</type>
</CustomField>