unpackaged/main/default/objects/Opportunity/fields/Core_Business__c.field-meta.xml
<CustomField>
    <fullName>Core_Business__c</fullName>
    <label>Core Business</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Expertise__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Core_Business</valueSetName>
    </valueSet>
</CustomField>