unpackaged/main/default/objects/Opportunity/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country</description>
    <label>DO NOT USE Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>