unpackaged/main/default/objects/Opportunity/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <description>Decision Criteria</description>
    <inlineHelpText>Weak = decision criteria is not clearly defined and undestood  | Moderate = decision criteria is defined but our business case is not yet approved by the customer | Strong = decision criteria is defined and our business case is approved by the Customer</inlineHelpText>
    <label>Decision Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MEDDIC_Values</valueSetName>
    </valueSet>
</CustomField>