unpackaged/main/default/objects/Opportunity/fields/Decision_makers_and_influencers__c.field-meta.xml
<CustomField>
    <fullName>Decision_makers_and_influencers__c</fullName>
    <description>Decision-makers and influencers</description>
    <inlineHelpText>Who are the project's decision-makers and influencers (HRD, CIO...) ?</inlineHelpText>
    <label>Decision-makers and influencers ?</label>
    <type>TextArea</type>
</CustomField>