unpackaged/main/default/objects/Opportunity/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <description>Decision Process</description>
    <inlineHelpText>Weak = You don't know the client decision processes | Moderate = You know the technical or the business or the legal decision process, but not all 3 | Strong = You know the technical, business &amp; legal decision processes. You based your close plan on them</inlineHelpText>
    <label>Decision Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MEDDIC_Values</valueSetName>
    </valueSet>
</CustomField>