unpackaged/main/default/objects/Opportunity/fields/Defined_budget__c.field-meta.xml
<CustomField>
    <fullName>Defined_budget__c</fullName>
    <description>Defined budget</description>
    <label>Defined budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Defined_budget</valueSetName>
    </valueSet>
</CustomField>