unpackaged/main/default/objects/Opportunity/fields/Delivrables_Languages__c.field-meta.xml
<CustomField>
    <fullName>Delivrables_Languages__c</fullName>
    <label>Delivrables Languages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language_ISO</valueSetName>
    </valueSet>
</CustomField>