unpackaged/main/default/objects/Opportunity/fields/Demo_event__c.field-meta.xml
<CustomField>
    <fullName>Demo_event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox with false as a default value 
true if the oppy has an event demo</description>
    <label>Demo event</label>
    <type>Checkbox</type>
</CustomField>