unpackaged/main/default/objects/Opportunity/fields/Deployment_Status__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Status__c</fullName>
    <label>Deployment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>