unpackaged/main/default/objects/Opportunity/fields/DirectIndirect__c.field-meta.xml
<CustomField>
    <fullName>DirectIndirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner to be defined</label>
    <type>Checkbox</type>
</CustomField>