unpackaged/main/default/objects/Opportunity/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <description>Economic Buyer</description>
    <inlineHelpText>Weak = We don't know who the ultimate economic buyer is | Moderate = We know who the ultimate economic buyer is but we don't have his/her approval yet | Strong = We are in contact with the ultimate economic buyer and we are aligned with their criteria</inlineHelpText>
    <label>Economic Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MEDDIC_Values</valueSetName>
    </valueSet>
</CustomField>