unpackaged/main/default/objects/Opportunity/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>