unpackaged/main/default/objects/Opportunity/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <description>ERP</description>
    <label>ERP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Value 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>