unpackaged/main/default/objects/Opportunity/fields/Estimated_Project_Duration_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Duration_in_Months__c</fullName>
    <label>Estimated Project Duration (in Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>