unpackaged/main/default/objects/Opportunity/fields/Estimated_Project_Margin__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Margin__c</fullName>
    <label>Estimated Project Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>