unpackaged/main/default/objects/Opportunity/fields/Estimated_Project_Workload__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Workload__c</fullName>
    <label>Total Estimated Project Workload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>