unpackaged/main/default/objects/Opportunity/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>