unpackaged/main/default/objects/Opportunity/fields/Forecast_Category_EDIT__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category_EDIT__c</fullName>
    <description>Duplicate field to allow picklist dependency</description>
    <label>Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upside</fullName>
                <default>true</default>
                <label>Upside</label>
            </value>
            <value>
                <fullName>Probable</fullName>
            </value>
            <value>
                <fullName>Firm</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>