unpackaged/main/default/objects/Opportunity/fields/Forecast_Status__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Status__c</fullName>
    <description>Forecast Status - une picklist des valeurs de forecast utilisées par cegid pour qualifier une opportunité</description>
    <label>TO BE DELETED Forecast Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upside</fullName>
            </value>
            <value>
                <fullName>Probable</fullName>
            </value>
            <value>
                <fullName>Firm</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>NOGO CEGID</fullName>
                <isActive>false</isActive>
                <label>NOGO CEGID</label>
            </value>
            <value>
                <fullName>NOGO CLIENT</fullName>
                <isActive>false</isActive>
                <label>NOGO CLIENT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>