unpackaged/main/default/objects/Opportunity/fields/Go_live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_live_Date__c</fullName>
    <label>Go-live Date</label>
    <type>Date</type>
</CustomField>