unpackaged/main/default/objects/Opportunity/fields/Handover_Date_Sales_to_PM__c.field-meta.xml
<CustomField>
    <fullName>Handover_Date_Sales_to_PM__c</fullName>
    <label>Handover Date Sales to PM</label>
    <type>Date</type>
</CustomField>