unpackaged/main/default/objects/Opportunity/fields/Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain__c</fullName>
    <description>Identify Pain</description>
    <inlineHelpText>Weak = No compelling event / we don’t know | Moderate = Compelling event exists, but impact or delay not significant to customer | Strong = Compelling event exists and impact or delay is significant to Customer</inlineHelpText>
    <label>Identify Pain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MEDDIC_Values</valueSetName>
    </valueSet>
</CustomField>