unpackaged/main/default/objects/Opportunity/fields/IdSIOrigine__c.field-meta.xml
<CustomField>
    <fullName>IdSIOrigine__c</fullName>
    <label>Id SI Origine</label>
    <length>50</length>
    <type>Text</type>
</CustomField>