unpackaged/main/default/objects/Opportunity/fields/Interlocutor_level__c.field-meta.xml
<CustomField>
    <fullName>Interlocutor_level__c</fullName>
    <description>Interlocutor level</description>
    <label>Interlocutor level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interlocutor_level</valueSetName>
    </valueSet>
</CustomField>