unpackaged/main/default/objects/Opportunity/fields/Is_Converted_From_Lead_Origin_Value__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted_From_Lead_Origin_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Converted From Lead Origin Value</label>
    <type>Checkbox</type>
</CustomField>